@@ -7,6 +7,8 @@ $Id$
 
 2006-11-30  Jens Langner <Jens.Langner@light-speed.de>
 
+	* CRTDebug.c: Now the the time calculations should finally be correct. I
+     really can't believe how easy it is/was to mix up milli with micro :)
 	* CRTDebug.c: fixed the STARTCLOCK()/STOPCLOCK() functionality as it was
 	  outputting incorrect time values which where quiet confusing.
 
